@@ -1,5 +1,5 @@
 #
-# $Id: svctool.in,v 2.673 2023-04-06 22:44:43+05:30 Cprogrammer Exp mbhangui $
+# $Id: svctool.in,v 2.674 2023-04-08 23:35:46+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -25,7 +25,7 @@ host=@HOST@
 shared_objects=0
 use_dlmopen=0
 skip_sendmail_check=0
-RCSID="# \$Id: svctool.in,v 2.673 2023-04-06 22:44:43+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: svctool.in,v 2.674 2023-04-08 23:35:46+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -3716,7 +3716,11 @@ if [ " $proxy_port" = " " ] ;then
 		dump_log_header $stype.$tag
 	fi
 else
-	dump_log_header proxy"`echo $cdb_f|tr '[:lower:]' '[:upper:]'`".$tag
+	if [ " $imap_ssl" = " 1" ] ; then
+		dump_log_header proxy"`echo $cdb_f|tr '[:lower:]' '[:upper:]'`"-ssl.$tag
+	else
+		dump_log_header proxy"`echo $cdb_f|tr '[:lower:]' '[:upper:]'`".$tag
+	fi
 fi
 ) > $TMPDIR/courierlog-run.$$
 if [ " $imap_ssl" = " 1" ] ; then
@@ -6918,41 +6922,31 @@ mrtg_extra()
 {
 	for i in POP3.110.pop3d.110 POP3-SSL.995.pop3d-ssl.995 \
 		IMAP.143.imapd.143 IMAP-SSL.993.imapd-ssl.993 \
-		PROXYIMAP.4143.proxyIMAP.4143 PROXYPOP3.4143.proxyPOP3.4110 \
-		PROXYIMAP-SSL.4143.proxyIMAP.9143 PROXYPOP3-SSL.4143.proxyPOP3.9110
+		PROXYIMAP.4143.proxyIMAP.4143 PROXYPOP3.4110.proxyPOP3.4110 \
+		PROXYIMAP-SSL.9143.proxyIMAP-ssl.9143 PROXYPOP3-SSL.9110.proxyPOP3-ssl.9110
 	do
 		t1=$(echo $i | cut -d. -f1)
 		t2=$(echo $i | cut -d. -f2)
 		t3=$(echo $i | cut -d. -f3-)
+		echo $i |grep PROXY > /dev/null
+		if [ $? -eq 0 ] ; then
+			s=$(echo $t3 | sed -e 's{proxy{proxy-{g' -e 's{IMAP{imapd{g' -e 's{POP3{pop3d{g')
+		else
+			s=qmail-"$t3"
+		fi
 		if [ ! -d $LOGDIR/$t3 ] ; then
 			continue
 		fi
-		echo "#-------------------------------------------------------------------"
-		echo "Title[$t1-total]: $t1 Totals (port $t2) - $1"
-		echo "MaxBytes[$t1-total]: 1000"
-		echo "AbsMax[$t1-total]: 100000"
-		echo "Options[$t1-total]: growright,unknaszero,nopercent,gauge,pngdate"
-		echo "Target[$t1-total]: \`$libexecdir/qmailmrtg7 a $LOGDIR/$t3\`"
-		echo "PageTop[$t1-total]: <B>$t1 Totals</B><BR>"
-		echo "ShortLegend[$t1-total]: $t1"
-		echo "YLegend[$t1-total]: $t1/hour"
-		echo "Legend1[$t1-total]: Allowed Connections&nbsp;"
-		echo "Legend2[$t1-total]: Denied Connections&nbsp;"
-		echo "LegendI[$t1-total]: Allow&nbsp;"
-		echo "LegendO[$t1-total]: Deny&nbsp;"
-		echo "WithPeak[$t1-total]: ymwd"
-		echo "XSize[$t1-total]: 350"
-		echo "YSize[$t1-total]: 150"
-		echo ""
 		echo "#-------------------------------------------------------------------"
 		echo "Title[$t1]: $t1 Concurrency (port $t2) - $1"
 		echo "MaxBytes[$t1]: 100"
 		echo "AbsMax[$t1]: 500"
 		echo "Options[$t1]: growright,unknaszero,nopercent,gauge,pngdate"
-		echo "Target[$t1]: \`$libexecdir/qmailmrtg7 t $LOGDIR/$t3\`"
+		echo "Target[$t1]: \`$libexecdir/qmailmrtg -t $LOGDIR/$t3 $SERVICEDIR/$s\`"
 		echo "PageTop[$t1]: <B>$t1 Concurrency</B><BR>"
-		echo "ShortLegend[$t1]: $t1"
-		echo "YLegend[$t1]: max $t1"
+		echo "ShortLegend[$t1]: concurrency"
+		t4=$(echo $t1|sed 's{PROXY{{g')
+		echo "YLegend[$t1]: max $t4"
 		echo "Legend1[$t1]: Peak Connections&nbsp;"
 		echo "Legend2[$t1]: Max Concurrency&nbsp;"
 		echo "LegendI[$t1]: $t1 Concurrency&nbsp;"
@@ -6961,40 +6955,63 @@ mrtg_extra()
 		echo "XSize[$t1]: 350"
 		echo "YSize[$t1]: 150"
 		echo ""
+		echo "#-------------------------------------------------------------------"
+		echo "Title[$t1-total]: $t1 allowed/denied (port $t2) - $1"
+		echo "MaxBytes[$t1-total]: 1000"
+		echo "AbsMax[$t1-total]: 100000"
+		echo "Options[$t1-total]: growright,unknaszero,nopercent,gauge,pngdate"
+		echo "Target[$t1-total]: \`$libexecdir/qmailmrtg -a $LOGDIR/$t3 $SERVICEDIR/$s\`"
+		echo "PageTop[$t1-total]: <B>$t1 Connections</B><BR>"
+		echo "ShortLegend[$t1-total]: conn/hour"
+		t4=$(echo $t1|sed 's{PROXY{{g')
+		echo "YLegend[$t1-total]: $t4-$t2 conn/hr"
+		echo "Legend1[$t1-total]: Allowed Connections&nbsp;"
+		echo "Legend2[$t1-total]: Denied Connections&nbsp;"
+		echo "LegendI[$t1-total]: Allowed&nbsp;"
+		echo "LegendO[$t1-total]: Denied&nbsp;"
+		echo "WithPeak[$t1-total]: ymwd"
+		echo "XSize[$t1-total]: 350"
+		echo "YSize[$t1-total]: 150"
+		echo ""
 	done
-	for i in $(grep -E -v "lo:|virb|ztk|ztr|vbox" /proc/net/dev|tail -n +3|cut -d: -f1)
-	do
-		echo "# ----- interface $i -----------------------"
-		echo "Title[$i]: $i bits - $1"
-		echo "Options[$i]: bits,growright,pngdate"
-		echo "Target[$i]: \`grep $i /proc/net/dev | sed 's/$i://' | awk '{print \$1; print \$9; print \"\"; print \"\"}'\`"
-		echo "PageTop[$i]: $i bits - $i"
-		echo "MaxBytes[$i]: 100000000"
-		echo "Ylegend[$i]: bits"
-		echo "ShortLegend[$i]: bits"
-		echo "XSize[$i]: 350"
-		echo "YSize[$i]: 150"
-		echo "Legend1[$i]: bits&nbsp;"
-		echo "LegendI[$i]: input&nbsp;"
-		echo "LegendO[$i]: output&nbsp;"
-		echo "WithPeak[$i]: ymwd"
-		echo
-	done
+	if [ -d $LOGDIR/inlookup.infifo ] ; then
+		for i in user relay password limit alias host domain cached
+		do
+			opt=$(echo $i |cut -c1)
+			echo "#-------------------------------------------------------------------"
+			echo "Title[inlookup-$i]: $i lookup - $1"
+			echo "MaxBytes[inlookup-$i]: 1000"
+			echo "AbsMax[inlookup-$i]: 100000"
+			echo "Options[inlookup-$i]: nopercent,growright,integer,gauge,pngdate"
+			echo "Target[inlookup-$i]: \`svc -1 $SERVICEDIR/inlookup.infifo && $libexecdir/qmailmrtg -i $opt $LOGDIR/inlookup.infifo $SERVICEDIR/inlookup.infifo\`"
+			echo "PageTop[inlookup-$i]: <B>Inlookup $i query rate</B><br>"
+			echo "ShortLegend[inlookup-$i]: q"
+			echo "YLegend[inlookup-$i]: queries"
+			echo "Legend1[inlookup-$i]: $i queries"
+			echo "Legend2[inlookup-$i]: total queries"
+			echo "LegendI[inlookup-$i]: $i queries"
+			echo "LegendO[inlookup-$i]: total queries"
+			echo "WithPeak[inlookup-$i]: ymwd"
+			echo "XSize[inlookup-$i]: 350"
+			echo "YSize[inlookup-$i]: 150"
+			echo ""
+		done
+	fi
 	if [ -d $LOGDIR/mysql.3306 ] ; then
 		echo "#"
 		echo "# MySQL QUERIES"
 		echo "#"
 		echo "Title[mysql_queries]: MySQL query count - $1"
-		echo "Target[mysql_queries]: \`/usr/bin/mysqladmin -u admin -p$ADMIN_PASS ver|awk '/Qu/{q=\$4;s=\$7}/Up/{u=\$0}/Se/{v=\$3}END{print q\"\\n\"s\"\\n\"u\"\\nMySQL version \"v}'|sed 's/Uptime:[[:space:]]\+//'\`"
+		echo "Target[mysql_queries]: \`/usr/bin/mysqladmin -u admin -p$ADMIN_PASS ver|awk '/Qu/{q=\$20;s=\$7}/Up/{u=\$0}/Se/{v=\$3}END{print q\"\\n\"s\"\\n\"u\"\\nMySQL version \"v}'|sed 's/Uptime:[[:space:]]\+//'\`"
 		echo "Options[mysql_queries]: nopercent, growright, integer, perminute, pngdate"
 		echo "MaxBytes[mysql_queries]: 250000"
 		echo "PageTop[mysql_queries]: <h1>MySQL query count</h1>"
 		echo "ShortLegend[mysql_queries]: q/m"
-		echo "YLegend[mysql_queries]: Count"
-		echo "LegendI[mysql_queries]: queries"
-		echo "LegendO[mysql_queries]: slow queries"
-		echo "Legend1[mysql_queries]: queries"
+		echo "YLegend[mysql_queries]: queries/minute"
+		echo "Legend1[mysql_queries]: queries/minute"
 		echo "Legend2[mysql_queries]: slow queries"
+		echo "LegendI[mysql_queries]: queries/minute"
+		echo "LegendO[mysql_queries]: slow queries"
 		echo "XSize[mysql_queries]: 350"
 		echo "YSize[mysql_queries]: 150"
 		echo ""
@@ -7022,7 +7039,7 @@ mrtg_extra()
 		echo "MaxBytes[clamd]: 10000"
 		echo "AbsMax[clamd]: 100000"
 		echo "Options[clamd]: growright,unknaszero,nopercent,gauge,pngdate"
-		echo "Target[clamd]: \`$libexecdir/qmailmrtg7 C $LOGDIR/clamd\`"
+		echo "Target[clamd]: \`$libexecdir/qmailmrtg -C $LOGDIR/clamd $SERVICEDIR/clamd\`"
 		echo "PageTop[clamd]: <B>ClamAV</B><br>"
 		echo "ShortLegend[clamd]: Msg"
 		echo "YLegend[clamd]: viri/hour"
@@ -7035,6 +7052,24 @@ mrtg_extra()
 		echo "YSize[clamd]: 150"
 		echo ""
 	fi
+	for i in $(grep -E -v "lo:|virb|ztk|ztr|vbox" /proc/net/dev|tail -n +3|cut -d: -f1)
+	do
+		echo "# ----- interface $i -----------------------"
+		echo "Title[$i]: $i bits - $1"
+		echo "Options[$i]: bits,growright,pngdate"
+		echo "Target[$i]: \`grep $i /proc/net/dev | sed 's/$i://' | awk '{print \$1; print \$9; print \"\"; print \"\"}'\`"
+		echo "PageTop[$i]: $i bits - $i"
+		echo "MaxBytes[$i]: 100000000"
+		echo "Ylegend[$i]: bits"
+		echo "ShortLegend[$i]: bits"
+		echo "XSize[$i]: 350"
+		echo "YSize[$i]: 150"
+		echo "Legend1[$i]: bits&nbsp;"
+		echo "LegendI[$i]: input&nbsp;"
+		echo "LegendO[$i]: output&nbsp;"
+		echo "WithPeak[$i]: ymwd"
+		echo
+	done
 }
 
 create_mrtg()
