@@ -165,6 +165,8 @@ multi-signature generation
 94. indimail-mta.spec: added /etc/indimail/favicon.base64 image for mrtg
     graphs
 95. svctool: --mrtg command - added favicon.png to mailmrtg/index.html
+- 08/04/2023
+96. svctool: added mrtg graphs for inlookup queries
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
